# checkers-haskell

./: LICENSE  README.md
minigames/: minigames.cabal
minigames/src/: Game.hs  Logic.hs  Main.hs  Rendering.hs
minigames/test/: Spec.hs
