name:                minigames
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ufabc-bcc/proposta-de-projeto-noturno-hs-minigames/blob/master/proposta-minigames.pdf
license:             BSD3
license-file:        LICENSE
author:              Emerson Matos & Arthur Fernandes
maintainer:          example@example.com
copyright:           2019 Emerson Matos & Arthur Fernandes
category:            Games
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable minigames
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Game
                     , Logic
                     , Rendering
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, gloss, array

test-suite minigames-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
      src
  other-modules:       Game
                     , Logic
  build-depends:
      tasty
    , tasty-hunit
    , gloss
    , array
    , base >=4.7 && <5
  default-language: Haskell2010